--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   <!-- custom js -->
   <script src="script.js"></script>
 
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
+<!--   <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script> -->
 </body>
 
 </html>
