added fb new url index.html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h3> And I'm a <span class="multiple-text"></span> </h3>
       <p> I am deeply passionate about designing and traveling, as they allow me to explore new perspectives, cultures, and inspirations, and incorporate them into my creative work. </p>
       <div class="social-media">
-        <a href="https://www.facebook.com/profile.php?id=100009708370819" target="_blank"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.facebook.com/azizul0220/" target="_blank"><i class='bx bxl-facebook'></i></a>
         <a href="https://www.linkedin.com/in/azizulislam22/" target="_blank"><i class='bx bxl-linkedin'></i></a>
         <a href="https://twitter.com/azizulislam022" target="_blank"><i class='bx bxl-twitter'></i></a>
         <a href="https://github.com/azizulislam22" target="_blank"><i class='bx bxl-github'></i></a>
