added new links index.html

--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       <p> I am deeply passionate about designing and traveling, as they allow me to explore new perspectives, cultures, and inspirations, and incorporate them into my creative work. </p>
       <div class="social-media">
         <a href="https://www.facebook.com/azizul0220/" target="_blank"><i class='bx bxl-facebook'></i></a>
-        <a href="https://www.linkedin.com/in/azizulislam22/" target="_blank"><i class='bx bxl-linkedin'></i></a>
-        <a href="https://twitter.com/azizulislam022" target="_blank"><i class='bx bxl-twitter'></i></a>
-        <a href="https://github.com/azizulislam22" target="_blank"><i class='bx bxl-github'></i></a>
+        <a href="https://www.linkedin.com/in/azizul0220/" target="_blank"><i class='bx bxl-linkedin'></i></a>
+        <a href="https://twitter.com/azizul0220" target="_blank"><i class='bx bxl-twitter'></i></a>
+        <a href="https://github.com/azizul0220" target="_blank"><i class='bx bxl-github'></i></a>
         <a href="https://www.youtube.com/@PlusPlus_" target="_blank"><i class='bx bxl-youtube' ></i></a>
-        <a href="https://linktr.ee/azizulislam" target="_blank"><i class='bx bx-link'></i></a>
+        <a href="https://linktr.ee/azizul0220" target="_blank"><i class='bx bx-link'></i></a>
       </div>
       <a href="https://drive.google.com/file/d/1HOXEBln37hcww4xxepNM-nIsRrzty1YD/view?usp=sharing" target="_blank" class="btn"> Download CV </a>
     </div>
@@ -65,7 +65,7 @@
       <h2 class="heading"> About <span>Me</span> </h2>
       <h3> Frontend Developer! </h3>
       <p>Designing is not just a job for me; it's a passion and a way of life. The process of creating something from scratch and bringing an idea to life through design is incredibly fulfilling. I love exploring different styles, colors, and textures to create something unique and visually stunning. Design is not just about aesthetics; it's also about solving problems and creating something that's both functional and beautiful. I'm constantly inspired by the world around me, and I love incorporating different cultural influences into my designs. Design is a never-ending learning process, and I'm always looking for ways to improve and refine my skills. Working with clients to bring their vision to life through design is one of the most rewarding aspects of my job. Designing is not just about creating something pretty; it's about telling a story and evoking emotion through visual communication. I'm always looking for new challenges and opportunities to push myself creatively and explore new design techniques. Design is not just a passion for me; it's a calling, and I feel incredibly fortunate to be able to do something I love every day.</p>
-      <a href="https://www.facebook.com/profile.php?id=100009708370819" target="_blank" class="btn"> More </a>
+      <a href="https://www.facebook.com/azizul0220" target="_blank" class="btn"> More </a>
     </div>
   </section>
 
@@ -116,7 +116,7 @@
         <i class='bx bx-code-alt'></i>
         <h3> Organized A Programming Contest </h3>
         <p>On October 9, 2022, we arranged an intra-batch programming contest, hosted by our very own Sazzad Hossain Bhuiyan Sir. Along with him me and some of my friends performed the role as moderator.</p>
-        <a href="https://www.linkedin.com/posts/azizulislam22_its-really-a-great-opportunity-for-me-that-activity-7039902372352974848-Ua4o?utm_source=share&utm_medium=member_desktop" target="_blank" class="btn"> Read More </a>
+        <a href="https://www.linkedin.com/posts/azizul0220_its-really-a-great-opportunity-for-me-that-activity-7039902372352974848-Ua4o?utm_source=share&utm_medium=member_desktop" target="_blank" class="btn"> Read More </a>
       </div>
     </dev>
   </section>
@@ -130,7 +130,7 @@
       <div class="proj-layer">
         <h4> Web Calculator </h4>
         <p>This calculator can perform various mathematical operations such as addition, subtraction, multiplication, division, and more complex calculations.</p>
-        <a href="https://github.com/azizulislam22/Calculator" target="_blank"><i class='bx bx-link-external'></i></a>
+        <a href="https://github.com/azizul0220/Calculator" target="_blank"><i class='bx bx-link-external'></i></a>
       </div>
       </div>
     </dev>
