added new skill index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <p> <span>Languages:</span> C | C++ | Javascript | Python | Dart</p>
       <p> <span>Frontend:</span> HTML | CSS </p>
       <p><span>Frameworks:</span> Bootstrap | Flutter </p>
-      <p><span>Others:</span> Git </p>
+      <p><span>Others:</span> Git | GitHub </p>
     </dev>
   </section>
 
