edit project heading index.html

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
   <!-- project section -->
   <section class="project" id="project">
-    <h2 class="heading"> <span> Projects </span> </h2>
+    <h2 class="heading"> Some things I've <span> Build </span> </h2>
     <dev class="proj-content">
       <div class="project-box">
       <img src="assets/calculator.png" alt="calculator">
