navbar updated index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </section>
 
 <!--   about section -->
-  <section class="about" id="about">
+  <section class="aboutme" id="aboutme">
     
     <div class="about-img">
       <img src="assets/profile2.png" alt="">
@@ -109,7 +109,7 @@
   </section>
 
   <!-- achievement section -->
-  <section class="achievement" id="achievement">
+  <section class="achievements" id="achievements">
     <h2 class="heading"> My <span>Achievements</span></h2>
     <dev class="achv-content">
       <div class="achv-box">
@@ -122,7 +122,7 @@
   </section>
 
   <!-- project section -->
-  <section class="project" id="project">
+  <section class="projects" id="projects">
     <h2 class="heading"> Some things I've <span> Build </span> </h2>
     <dev class="proj-content">
       <div class="project-box">
@@ -137,7 +137,7 @@
   </section>
 
   <!-- contact section -->
-  <section class="contact" id="contact">
+  <section class="contactme" id="contactme">
     <h2 class="heading"> Contact <span>Me!</span></h2>
 
     <form action="#">
