navbar updated index.html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar">
       <a href="#home" class="active"> Home </a>
-      <a href="#aboutme"> About Me </a>
+      <a href="#about"> About Me </a>
       <a href="#education"> Education </a>
       <a href="#skills"> Skills </a>
       <a href="#achievements"> Achievements </a>
@@ -55,7 +55,7 @@
   </section>
 
 <!--   about section -->
-  <section class="aboutme" id="aboutme">
+  <section class="about" id="about">
     
     <div class="about-img">
       <img src="assets/profile2.png" alt="">
