about updated index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header class="header">
-    <a href="#" class="logo"> azizul_ </a>
+    <a href="theme" class="logo"> azizul_ </a>
     <i class='bx bx-menu' id="menu-icon"></i>
 
     <nav class="navbar">
@@ -64,7 +64,7 @@
     <div class="about-content">
       <h2 class="heading"> About <span>Me</span> </h2>
       <h3> Frontend Developer! </h3>
-      <p>Designing is not just a job for me; it's a passion and a way of life. The process of creating something from scratch and bringing an idea to life through design is incredibly fulfilling. I love exploring different styles, colors, and textures to create something unique and visually stunning. Design is not just about aesthetics; it's also about solving problems and creating something that's both functional and beautiful. I'm constantly inspired by the world around me, and I love incorporating different cultural influences into my designs. Design is a never-ending learning process, and I'm always looking for ways to improve and refine my skills. Working with clients to bring their vision to life through design is one of the most rewarding aspects of my job. Designing is not just about creating something pretty; it's about telling a story and evoking emotion through visual communication. I'm always looking for new challenges and opportunities to push myself creatively and explore new design techniques. Design is not just a passion for me; it's a calling, and I feel incredibly fortunate to be able to do something I love every day.</p>
+      <p>Designing is more than just a job; it's a passion and a way of life for me. The process of creating something from scratch and bringing an idea to life through design brings me immense fulfillment. I thrive on exploring a wide range of styles, colors, and textures to craft something truly unique and visually captivating. However, design is not solely about aesthetics; it's about problem-solving and creating functional yet beautiful solutions. My designs are heavily influenced by the world around me, drawing inspiration from various cultures and incorporating their essence into my work.</p>
       <a href="https://www.facebook.com/azizul0220" target="_blank" class="btn"> More </a>
     </div>
   </section>
