logo updated index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header class="header">
-    <a href="theme" class="logo"> azizul_ </a>
+    <a href="#home" class="logo"> azizul_ </a>
     <i class='bx bx-menu' id="menu-icon"></i>
 
     <nav class="navbar">
