--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
 <!--   education section -->
   <section class="education" id="education">
-    <h1 class="heading"> My <span> Education </span> </h1>
+    <h2 class="heading"> My <span> Education </span> </h2>
     <div class="edu-content">
       <li>
       <div class="edu-img">
@@ -100,12 +100,12 @@
   <!-- skill section -->
   <section class="skills" id="skills">
     <h2 class="heading"> My <span>Skills</span> </h2>
-    <dev class="skill-content">
-      <p> <span>Languages:</span> C | C++ | Javascript | Python | Dart</p>
+    <div class="skill-content">
+      <p> <span>Languages:</span> C | C++ | Javascript | Python </p>
       <p> <span>Frontend:</span> HTML | CSS </p>
-      <p><span>Frameworks:</span> Bootstrap | Flutter </p>
+      <p><span>Frameworks:</span> Bootstrap </p>
       <p><span>Others:</span> Git | GitHub </p>
-    </dev>
+    </div>
   </section>
 
   <!-- achievement section -->
