--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="https://www.linkedin.com/in/azizulever/" target="_blank"><i class='bx bxl-linkedin'></i></a>
         <a href="https://twitter.com/azizulever" target="_blank"><i class='bx bxl-twitter'></i></a>
         <a href="https://github.com/azizulever" target="_blank"><i class='bx bxl-github'></i></a>
-        <a href="https://www.youtube.com/@PlusPlus_" target="_blank"><i class='bx bxl-youtube' ></i></a>
+        <a href="https://www.youtube.com/@azizulever" target="_blank"><i class='bx bxl-youtube' ></i></a>
         <a href="https://linktr.ee/azizulever" target="_blank"><i class='bx bx-link'></i></a>
       </div>
       <a href="https://drive.google.com/file/d/1KaRU5MBSeJw47wAmVENmAe5Q9N9YiQAq/view?usp=share_link" target="_blank" class="btn"> Resume </a>
