--- a/index.html
+++ b/index.html
@@ -82,8 +82,6 @@
         <p>March 2022 - March 2027</p>
         <p>Dhaka, Bangladesh</p>
       </li>
-      
-      <!-- <hr class="my-line"><br> -->
 
       <li>
       <div class="edu2-img">
@@ -130,8 +128,17 @@
       <div class="achv-box">
         <i class='bx bx-code-alt'></i>
         <h3> Organized A Programming Contest </h3>
-        <p>On October 9, 2022, we arranged an intra-batch programming contest, hosted by our very own Sazzad Hossain Bhuiyan Sir. Along with him me and some of my friends performed the role as moderator.</p>
+        <p> On October 9, 2022, we arranged an intra-batch programming contest, hosted by our very own Sazzad Hossain Bhuiyan Sir. Along with him me and some of my friends performed the role as moderator. </p>
         <a href="https://www.linkedin.com/posts/azizulever_its-really-a-great-opportunity-for-me-that-activity-7039902372352974848-Py7-?utm_source=share&utm_medium=member_desktop" target="_blank" class="btn"> Read More </a>
+      </div>
+    </dev>
+
+    <dev class="achv-content">
+      <div class="achv-box">
+        <i class='bx bx-code-alt'></i>
+        <h3> Achieved TOP-1 at "SMUCT CSE FEST 2023 - Programming Contest. </h3>
+        <p> Accomplished TOP-1 at "SMUCT CSE FEST 2023 - Programming Contest" with the incredible support of my talented teammates. </p>
+        <a href="https://www.linkedin.com/posts/azizulever_secured-rank-top-1-at-smuct-cse-fest-2023-activity-7088725886492971008-Tf_m?utm_source=share&utm_medium=member_desktop" target="_blank" class="btn"> Read More </a>
       </div>
     </dev>
   </section>
