--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     
       <div class="achv-box">
         <i class='bx bx-code-alt'></i>
-        <h3> Achieved TOP-1 at "SMUCT CSE FEST 2023 - Programming Contest. </h3>
+        <h3> Achieved TOP - 1 at SMUCT CSE FEST 2023 - Programming Contest. </h3>
         <p> Accomplished TOP-1 at "SMUCT CSE FEST 2023 - Programming Contest" with the incredible support of my talented teammates. </p>
         <a href="https://www.linkedin.com/posts/azizulever_secured-rank-top-1-at-smuct-cse-fest-2023-activity-7088725886492971008-Tf_m?utm_source=share&utm_medium=member_desktop" target="_blank" class="btn"> Read More </a>
       </div>
