--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 
 <body>
   <header class="header">
-    <a href="#home" class="logo"> azizul_ </a>
-    <i class='bx bx-menu' id="menu-icon"></i>
+    <div class="aside">
+      <div class="logo">
+        <a href="#home"> azizul_ </a>
+      </div>
+    </div>
 
+    <i class='bx bx-menu' id="menu-icon"></i>
+    
     <nav class="navbar">
       <a href="#home" class="active"> Home </a>
       <a href="#about"> About Me </a>
