--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <div class="proj-layer">
         <h4> Web Calculator </h4>
         <p>This calculator can perform various mathematical operations such as addition, subtraction, multiplication, division, and more complex calculations.</p>
-        <a href="https://github.com/azizulever/Calculator" target="_blank"><i class='bx bx-link-external'></i></a>
+        <a href="https://azizulever.github.io/Calculator/" target="_blank"><i class='bx bx-link-external'></i></a>
       </div>
       </div>
     </dev>
