--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a href="https://www.youtube.com/@azizulever" target="_blank"><i class='bx bxl-youtube' ></i></a>
         <a href="https://linktr.ee/azizulever" target="_blank"><i class='bx bx-link'></i></a>
       </div>
-      <a href="https://drive.google.com/file/d/1KaRU5MBSeJw47wAmVENmAe5Q9N9YiQAq/view?usp=share_link" target="_blank" class="btn"> Resume </a>
+      <a href="assets/Resume.pdf" target="_blank" class="btn"> Resume </a>
     </div>
 
     <div class="home-img">
