--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dev Portfolio | Flutter Developer & Designer</title>
+  <title>Azizul Islam | Flutter Developer & Designer</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
 </head>
@@ -14,7 +14,7 @@
   <header>
     <div class="container">
       <nav class="navbar">
-        <a href="#" class="logo">Azizul<span>Islam</span></a>
+        <a href="#" class="logo">Azizul<span> Islam</span></a>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -59,7 +59,7 @@
       </div>
       <div class="about-content">
         <div class="about-image">
-          <img src="/api/placeholder/400/500" alt="Profile Image">
+          <img src="assets/profile.png" alt="Profile Image">
         </div>
         <div class="about-text">
           <h3>I'm a Flutter Developer with a passion for creating beautiful mobile experiences</h3>
@@ -73,15 +73,15 @@
             projects, or sharing my knowledge through tech communities and blogs.</p>
           <div class="stats">
             <div class="stat-item">
-              <h4>4+</h4>
+              <h4>1+</h4>
               <p>Years Experience</p>
             </div>
             <div class="stat-item">
-              <h4>20+</h4>
+              <h4>5+</h4>
               <p>Projects Completed</p>
             </div>
             <div class="stat-item">
-              <h4>15+</h4>
+              <h4>2+</h4>
               <p>Happy Clients</p>
             </div>
           </div>
@@ -102,7 +102,7 @@
           <h3>Development</h3>
           <div class="skill-list">
             <div class="skill-item">
-              <i class="fab fa-flutter"></i>
+              <i class="custom-icon flutter-icon"></i>
               <p>Flutter</p>
             </div>
             <div class="skill-item">
