education section added

--- a/index.html
+++ b/index.html
@@ -228,14 +228,16 @@
           </div>
           <div class="project-content">
             <h4>amargate UI</h4>
-            <p>A comprehensive UI/UX design for an home society which can track the whole society community daily activities</p>
+            <p>A comprehensive UI/UX design for an home society which can track the whole society community daily
+              activities</p>
             <div class="project-tags">
               <span class="project-tag">UI Design</span>
               <span class="project-tag">Figma</span>
               <span class="project-tag">Prototyping</span>
             </div>
             <div class="project-links">
-              <a href="https://www.figma.com/design/8Bh3HaO2MAjZM7yRYYAs0m/Resident-System?node-id=0-1&p=f&t=taBU4zJ84bftRPiz-0" target="_blank" class="project-link">
+              <a href="https://www.figma.com/design/8Bh3HaO2MAjZM7yRYYAs0m/Resident-System?node-id=0-1&p=f&t=taBU4zJ84bftRPiz-0"
+                target="_blank" class="project-link">
                 <i class="fas fa-external-link-alt"></i>
                 Live Demo
               </a>
@@ -266,62 +268,54 @@
     </div>
   </section>
 
-  <!-- Education Section -->
+  <!-- Education & Experience Section -->
   <section id="education">
     <div class="container">
       <div class="section-header">
         <h2>Education & Experience</h2>
         <p>My academic background and professional journey</p>
       </div>
-      <div class="timeline">
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-date">2022 - Present</div>
-          <div class="timeline-content">
-            <h4>Senior Flutter Developer</h4>
-            <h5>TechInnovate Solutions</h5>
-            <p>Leading a team of developers in building cross-platform mobile applications for enterprise clients.
-              Implementing best practices, architecture patterns, and mentoring junior developers.</p>
+
+      <!-- Education Section -->
+      <div class="timeline-section">
+        <h3 class="timeline-section-title">Education</h3>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">2022 - 2026</div>
+            <div class="timeline-content">
+              <h4>BSc in Computer Science & Engineering</h4>
+              <h5>Shanto-Mariam University of Creative Technology</h5>
+              <p>Hosted intra-batch programming contests and became Champion in 2023 by solving 11/15 problems with my team. Gained hands-on skills in Data Structures, Algorithms, OOP, and Competitive Programming using C/C++.</p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">2018 - 2020</div>
+            <div class="timeline-content">
+              <h4>HSC (Science)</h4>
+              <h5>Mascot Innovative College</h5>
+              <p>Completed Higher Secondary Education in Science with a strong foundation in Physics, Chemistry, Mathematics, and ICT.</p>
+            </div>
           </div>
         </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-date">2020 - 2022</div>
-          <div class="timeline-content">
-            <h4>Mobile App Developer</h4>
-            <h5>DigitalCraft Studios</h5>
-            <p>Developed and maintained multiple Flutter applications with complex UI/UX designs. Collaborated with
-              designers and backend developers to deliver high-quality mobile experiences.</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-date">2019 - 2020</div>
-          <div class="timeline-content">
-            <h4>UI/UX Designer & Developer</h4>
-            <h5>CreativeMinds Agency</h5>
-            <p>Created user interfaces and experiences for mobile applications. Implemented designs using Flutter
-              framework and collaborated with the product team to refine user journeys.</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-date">2017 - 2019</div>
-          <div class="timeline-content">
-            <h4>MSc in Computer Science</h4>
-            <h5>Tech University</h5>
-            <p>Specialized in Mobile Application Development and Human-Computer Interaction. Thesis focused on improving
-              performance optimization techniques in Flutter applications.</p>
-          </div>
-        </div>
-        <div class="timeline-item">
-          <div class="timeline-dot"></div>
-          <div class="timeline-date">2013 - 2017</div>
-          <div class="timeline-content">
-            <h4>BSc in Software Engineering</h4>
-            <h5>State University</h5>
-            <p>Graduated with honors. Participated in multiple hackathons and developed a passion for mobile app
-              development through various personal and academic projects.</p>
+      </div>
+
+      <!-- Experience Section -->
+      <div class="timeline-section">
+        <h3 class="timeline-section-title">Experience</h3>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">Jan 2024 - Jun 2024 (6 mos)</div>
+            <div class="timeline-content">
+              <h4>Strategic Marketing Intern</h4>
+              <h5>Shanto-Mariam University of Creative Technology</h5>
+              <p>Led digital marketing initiatives and social media campaigns for the CSE & CSIT Department, boosting
+                online engagement and brand presence.
+                Utilized Figma for visuals and executed strategies in advertising, consulting, and business marketing.
+              </p>
+            </div>
           </div>
         </div>
       </div>
