--- a/index.html
+++ b/index.html
@@ -325,11 +325,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <div class="container">
-      <div class="section-header">
-        <h2>Get In Touch</h2>
-        <p>Feel free to contact me for any project or collaboration</p>
-      </div>
-      <div class="contact-container">
+      <div class="contact-container contact-centered">
         <div class="contact-info">
           <h3>Let's Talk About Your Project</h3>
           <p>I'm always open to discussing new projects, creative ideas or opportunities to be part of your vision. Feel
@@ -341,16 +337,7 @@
               </div>
               <div class="contact-detail-text">
                 <h4>Email</h4>
-                <p>hello@yourname.com</p>
-              </div>
-            </div>
-            <div class="contact-detail">
-              <div class="contact-icon">
-                <i class="fas fa-phone-alt"></i>
-              </div>
-              <div class="contact-detail-text">
-                <h4>Phone</h4>
-                <p>+1 (555) 123-4567</p>
+                <p>contact.azizulislam@gmail.com</p>
               </div>
             </div>
             <div class="contact-detail">
@@ -359,45 +346,21 @@
               </div>
               <div class="contact-detail-text">
                 <h4>Location</h4>
-                <p>San Francisco, CA</p>
+                <p>Dhaka, Bangladesh</p>
               </div>
             </div>
           </div>
           <div class="contact-social">
-            <a href="#" class="social-icon">
+            <a href="https://www.linkedin.com/in/azizulever/" target="_blank" class="social-icon">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://github.com/azizulever" target="_blank" class="social-icon">
               <i class="fab fa-github"></i>
             </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a href="#" class="social-icon">
-              <i class="fab fa-dribbble"></i>
+            <a href="https://www.facebook.com/azizulever" target="_blank" class="social-icon">
+              <i class="fab fa-facebook"></i>
             </a>
           </div>
-        </div>
-        <div class="contact-form">
-          <form>
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" id="name" placeholder="Your Name">
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" placeholder="Your Email">
-            </div>
-            <div class="form-group">
-              <label for="subject">Subject</label>
-              <input type="text" id="subject" placeholder="Subject">
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea id="message" placeholder="Your Message"></textarea>
-            </div>
-            <button type="submit" class="submit-btn">Send Message</button>
-          </form>
         </div>
       </div>
     </div>
@@ -406,8 +369,8 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <div class="footer-container">
-        <div class="footer-col">
+      <div class="footer-container simplified">
+        <div class="footer-col about">
           <h4>About Me</h4>
           <p>Flutter developer and UI/UX designer passionate about creating beautiful and functional mobile experiences.
             Always eager to take on new challenges and push the boundaries of what's possible.</p>
@@ -416,33 +379,15 @@
           <h4>Quick Links</h4>
           <ul class="footer-links">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#education">Education</a></li>
             <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>Services</h4>
-          <ul class="footer-links">
-            <li><a href="#">Mobile App Development</a></li>
-            <li><a href="#">UI/UX Design</a></li>
-            <li><a href="#">Frontend Development</a></li>
-            <li><a href="#">Consultation</a></li>
-          </ul>
-        </div>
-        <div class="footer-col">
-          <h4>Follow Me</h4>
-          <ul class="footer-links">
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Dribbble</a></li>
           </ul>
         </div>
       </div>
       <div class="footer-bottom">
-        <p>&copy; 2025 <span>DevFolio</span>. All Rights Reserved.</p>
+        <p>&copy; 2025 <span>Azizul Islam</span>. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
