--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="hero-wrapper">
         <div class="hero-content-col">
           <div class="hero-image fade-in-up">
-            <img src="assets/profile.png" alt="Profile Image">
+            <img src="assets/hero-picture.png" alt="Profile Image">
             <div class="image-bg-shape"></div>
           </div>
         </div>
