--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
               <p>Won 1st place in the SMUCT CSE FEST 2023 - programming contest by solving 11/15 problems with my team</p>
             </div>
           </div>
-          <a href="" target="_blank" class="achievement-link">
+          <a href="https://www.linkedin.com/posts/azizulever_secured-rank-top-1-at-smuct-cse-fest-2023-activity-7088725886492971008-Tf_m?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAD1qrGwBDQPVVjp2e-Uf4i17mx6MsOywvJk" target="_blank" class="achievement-link">
             View Certificate <i class="fas fa-arrow-right"></i>
           </a>
         </div>
@@ -392,7 +392,7 @@
               <p>Hosted a intra-batch programming contest along with Tanbir Ramim, Tasif Hossain, Naimur Hasan, and I played the role of moderator and problem setting.</p>
             </div>
           </div>
-          <a href="https://github.com/azizulever" target="_blank" class="achievement-link">
+          <a href="https://www.linkedin.com/posts/azizulever_its-really-a-great-opportunity-for-me-that-activity-7039902372352974848-Py7-?utm_source=social_share_send&utm_medium=member_desktop_web&rcm=ACoAAD1qrGwBDQPVVjp2e-Uf4i17mx6MsOywvJk" target="_blank" class="achievement-link">
             View More <i class="fas fa-arrow-right"></i>
           </a>
         </div>
