skill section modified

--- a/index.html
+++ b/index.html
@@ -86,48 +86,16 @@
             <div class="skill-bar">
               <div class="skill-info">
                 <p>Flutter</p>
-                <p class="percent">90%</p>
-              </div>
-              <div class="skill-progress">
-                <div class="progress" style="width: 90%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-bar">
-              <div class="skill-info">
-                <p>Firebase</p>
-                <p class="percent">85%</p>
-              </div>
-              <div class="skill-progress">
-                <div class="progress" style="width: 85%;"></div>
-              </div>
-            </div>
-
-            <div class="skill-bar">
-              <div class="skill-info">
-                <p>API Integration</p>
                 <p class="percent">80%</p>
               </div>
               <div class="skill-progress">
                 <div class="progress" style="width: 80%;"></div>
               </div>
             </div>
-          </div>
-
-          <div class="skills-column">
-            <div class="skill-bar">
-              <div class="skill-info">
-                <p>Figma</p>
-                <p class="percent">75%</p>
-              </div>
-              <div class="skill-progress">
-                <div class="progress" style="width: 75%;"></div>
-              </div>
-            </div>
 
             <div class="skill-bar">
               <div class="skill-info">
-                <p>Git</p>
+                <p>Firebase</p>
                 <p class="percent">70%</p>
               </div>
               <div class="skill-progress">
@@ -137,11 +105,43 @@
 
             <div class="skill-bar">
               <div class="skill-info">
-                <p>GitHub</p>
+                <p>API Integration</p>
                 <p class="percent">75%</p>
               </div>
               <div class="skill-progress">
                 <div class="progress" style="width: 75%;"></div>
+              </div>
+            </div>
+          </div>
+
+          <div class="skills-column">
+            <div class="skill-bar">
+              <div class="skill-info">
+                <p>Figma</p>
+                <p class="percent">90%</p>
+              </div>
+              <div class="skill-progress">
+                <div class="progress" style="width: 90%;"></div>
+              </div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="skill-info">
+                <p>Git</p>
+                <p class="percent">90%</p>
+              </div>
+              <div class="skill-progress">
+                <div class="progress" style="width: 90%;"></div>
+              </div>
+            </div>
+
+            <div class="skill-bar">
+              <div class="skill-info">
+                <p>GitHub</p>
+                <p class="percent">90%</p>
+              </div>
+              <div class="skill-progress">
+                <div class="progress" style="width: 90%;"></div>
               </div>
             </div>
           </div>
@@ -210,7 +210,7 @@
         </div>
         <div class="project-card" data-category="web">
           <div class="project-img">
-            <img src="#" alt="CodersLobby">
+            <img src="assets/coderslobby.png" alt="CodersLobby">
           </div>
           <div class="project-content">
             <h4>CodersLobby</h4>
