UI Project Added

--- a/index.html
+++ b/index.html
@@ -272,6 +272,24 @@
             </div>
           </div>
         </div>
+        <div class="project-card" data-category="ui">
+          <div class="project-img">
+            <img src="assets/tankibhaiUI.png" alt="TankiBhai UI Design">
+          </div>
+          <div class="project-content">
+            <h4>TankiBhai UI Design</h4>
+            <p>TankiBhai lets you easily track fuel, mileage, and costs with a clean, smooth, and smart experience.</p>
+            <div class="project-tags">
+              <span class="project-tag">Figma</span>
+            </div>
+            <div class="project-links">
+              <a href="https://www.figma.com/design/dYRnrJti9SRTwpufl0qYk8/TankiBhai-UI?node-id=0-1&t=d25zqVfkiYR5ENUI-1" target="_blank" class="project-link">
+                <i class="fas fa-external-link-alt"></i>
+                Live Demo
+              </a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
