--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div class="hero-btns">
               <a href="#projects" class="cta-btn">View My Work</a>
-              <a href="https://drive.google.com/file/d/18JgJRPXNGPV2Pnl26OHjGhUZPrUpLwln/view?usp=sharing" target="_blank" class="secondary-btn">
+              <a href="https://drive.google.com/file/d/1hHXtWb9Kfkyp6uuIrsix7vKzL-udKAV2/view" target="_blank" class="secondary-btn">
                 <i class="fas fa-download"></i>
                 My Resume
               </a>
